# geospatial_analysis

./: map.html  map_temperature.html  nea_realtime_plotly.ipynb  pipeline_nea_realtime.py  pyproject.toml  singapore_realtime_plotly.ipynb  temperature_choropleth.html  weather_geopandas.py  weather_singapore.ipynb  weather_singapore_asean.py
