[project]
name = "geospatial-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "branca>=0.8.2",
    "contextily>=1.7.0",
    "dash>=3.3.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "scipy>=1.16.3",
]

